tests/outref/TSQ006.ref
OCTO>  SELECT n.nspname                              AS "Schema",
Error with syntax near (line 1, column 58):

 SELECT n.nspname                              AS "Schema",
                                                          ^
syntax error, unexpected COMMA, expecting PERIOD

OCTO>        c.relname                              AS "Name",
OCTO>        CASE c.relkind
OCTO>          WHEN 'r' THEN 'table'
OCTO>          WHEN 'v' THEN 'view'
OCTO>          WHEN 'm' THEN 'materialized view'
OCTO>          WHEN 'i' THEN 'index'
OCTO>          WHEN 'S' THEN 'sequence'
OCTO>          WHEN 's' THEN 'special'
OCTO>          WHEN 'f' THEN 'foreign table'
OCTO>          WHEN 'p' THEN 'table'
OCTO>          WHEN 'I' THEN 'index'
OCTO>        end                                    AS "Type",
OCTO>        pg_catalog.Pg_get_userbyid(c.relowner) AS "Owner"
OCTO> FROM   pg_catalog.pg_class c
OCTO>        LEFT JOIN pg_catalog.pg_namespace n
OCTO>               ON n.oid = c.relnamespace
OCTO> WHERE  c.relkind IN ( 'r', 'p', 'v', 'm',
OCTO>                       'S', 'f', '' )
OCTO>        AND n.nspname <> 'pg_catalog'
OCTO>        AND n.nspname <> 'information_schema'
OCTO>        AND n.nspname !~ '^pg_toast'
OCTO>        AND pg_catalog.Pg_table_is_visible(c.oid)
OCTO> ORDER  BY 1,
OCTO>           2;
[ERROR] PATH:LINENUM DATE TIME : Error parsing statement: SELECT n.nspname                              AS "Schema",
       c.relname                              AS "Name",
       CASE c.relkind
         WHEN 'r' THEN 'table'
         WHEN 'v' THEN 'view'
         WHEN 'm' THEN 'materialized view'
         WHEN 'i' THEN 'index'
         WHEN 'S' THEN 'sequence'
         WHEN 's' THEN 'special'
         WHEN 'f' THEN 'foreign table'
         WHEN 'p' THEN 'table'
         WHEN 'I' THEN 'index'
       end                                    AS "Type",
       pg_catalog.Pg_get_userbyid(c.relowner) AS "Owner"
FROM   pg_catalog.pg_class c
       LEFT JOIN pg_catalog.pg_namespace n
              ON n.oid = c.relnamespace
WHERE  c.relkind IN ( 'r', 'p', 'v', 'm',
                      'S', 'f', '' )
       AND n.nspname <> 'pg_catalog'
       AND n.nspname <> 'information_schema'
       AND n.nspname !~ '^pg_toast'
       AND pg_catalog.Pg_table_is_visible(c.oid)
ORDER  BY 1,
          2;

OCTO> 
